<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/version_detect_info"
        android:textColor="@color/white"
        android:textSize="@dimen/huge_font_size" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#c9caca"
        android:contentDescription="@null"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/setting_big_margin"
        android:orientation="vertical" >
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/version_number_hint"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:gravity="center"
	            android:text="@string/version_num_hint"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	
	        <TextView
	            android:id="@+id/version_number"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/getting"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	    </LinearLayout>
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/device_mac_hint"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:gravity="center"
	            android:text="@string/device_mac_hint"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	
	        <TextView
	            android:id="@+id/device_mac"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/getting"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/device_num_hint"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="20dp"
	            android:gravity="center"
	            android:text="@string/device_num_hint"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	
	        <TextView
	            android:id="@+id/device_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/getting"
	            android:textColor="@color/grey"
	            android:textSize="@dimen/textsize_large" />
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>